--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>BACAN - Transformación Empresarial Argentina</title>
+    <meta name="description" content="BACAN impulsa la modernización de empresas argentinas con tecnología de punta y soluciones personalizadas para aumentar su competitividad." />
+    <meta name="keywords" content="transformación digital, empresas argentinas, modernización empresarial, tecnología, innovación" />
+    
+    <!-- GitHub Pages SPA router support -->
+    <script>
+      // Redirect to index.html for GitHub Pages
+      (function() {
+        if (window.location.search.includes('?/')) {
+          var redirectTo = window.location.pathname + window.location.search.replace('?/', '');
+          history.replaceState(null, null, redirectTo);
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
 </html>
