--- a/client/index.html
+++ b/client/index.html
@@ -8,14 +8,26 @@
     <meta name="keywords" content="transformación digital, empresas argentinas, modernización empresarial, tecnología, innovación" />
     
     <!-- GitHub Pages SPA router support -->
-    <script>
-      // Redirect to index.html for GitHub Pages
-      (function() {
-        if (window.location.search.includes('?/')) {
-          var redirectTo = window.location.pathname + window.location.search.replace('?/', '');
-          history.replaceState(null, null, redirectTo);
+    <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      // MIT License from https://github.com/rafgraph/spa-github-pages
+      // This script checks to see if a redirect is present in the query string,
+      // converts it back into the correct url and adds it to the
+      // browser's history using window.history.replaceState(...),
+      // which won't cause the browser to attempt to load the new url.
+      // When the single page app is loaded further down in this file,
+      // the correct url will be waiting in the browser's history for
+      // the single page app to route accordingly.
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
         }
-      })();
+      }(window.location))
     </script>
   </head>
   <body>
